--- a/harry.html
+++ b/harry.html
@@ -3,47 +3,52 @@
 	<head>
 		<title>Harry Martinson</title>
 	</head>
-		<h1>
-		<u><i>Harry Martinson</u></i>
-		</h1>
+		
 	<body>
-		<figure>
-			<img src="martinson-harry.jpg" alt="Harry martinson">
-			<figcaption>Bild på Harry</figcaption>
-		</figure>
+		<h1>
+			<u><i>Harry Martinsson</u></i>
+		</h1>
+		
+			<figure>
+				<img src="martinson-harry.jpg" alt="Harry martinson">
+				<figcaption>Bild pÃ¥ Harry</figcaption>
+			</figure>
 	<h2>
-	<i>Född i Jämshög, Blekinge 1904.</i>
+	<i>FÃ¶dd i JÃ¤mshÃ¶g, Blekinge 1904.</i>
 	</h2>
 <i>Harry Martinsons</i>
-barndom i fattiga omständigheter hindrade inte att
-han blev en av Sveriges absolut främsta författare. I &quot;Nässlorna blomma&quot; har han skapat en märklig
-barndomsskildring med utgångspunkt från sina erfarenheter som &quot;sockenbarn&quot;. Det var barn som
-togs om hand av den som krävde minst betalning av den tidens socialomsorg, fattigvården.
-<br> Ljuset i Martinsons barndom var skolan och där skolläraren Staf, som såg pojkens begåvning och
-uppmuntrade honom. Martinson gav sig ut på sjön, erfarenheter som bland annat gav inspiration till
-&quot;Kap Farväl&quot; en märklig bok med stark poetisk känsla i prosan. Harry Martinson passade inte på sjön
-och levde på land ett vagabonderande liv, som gett avtryck genom &quot;Vägen till Klockrike&quot; om luffarnas
-liv. Men existentiella frågor är hela tiden närvarande i hans beskrivningar.
+	<p>
+barndom i fattiga omstÃ¤ndigheter hindrade inte att
+han blev en av Sveriges absolut frÃ¤msta fÃ¶rfattare. I &quot;NÃ¤sslorna blomma&quot; har han skapat en mÃ¤rklig
+barndomsskildring med utgÃ¥ngspunkt frÃ¥n sina erfarenheter som &quot;sockenbarn&quot;. Det var barn som
+togs om hand av den som krÃ¤vde minst betalning av den tidens socialomsorg, fattigvÃ¥rden.
+<br> Ljuset i Martinsons barndom var skolan och dÃ¤r skollÃ¤raren Staf, som sÃ¥g pojkens begÃ¥vning och
+uppmuntrade honom. Martinson gav sig ut pÃ¥ sjÃ¶n, erfarenheter som bland annat gav inspiration till
+&quot;Kap FarvÃ¤l&quot; en mÃ¤rklig bok med stark poetisk kÃ¤nsla i prosan. Harry Martinson passade inte pÃ¥ sjÃ¶n
+och levde pÃ¥ land ett vagabonderande liv, som gett avtryck genom &quot;VÃ¤gen till Klockrike&quot; om luffarnas
+liv. Men existentiella frÃ¥gor Ã¤r hela tiden nÃ¤rvarande i hans beskrivningar.
+        </p>
 	<p> 
- 	Samtidigt som hans författarskap började ta fart mötte han Moa Martinson och de båda var gifta i ungefär ett decennium. 
+ 	Samtidigt som hans fÃ¶rfattarskap bÃ¶rjade ta fart mÃ¶tte han Moa Martinson och de bÃ¥da var gifta i ungefÃ¤r ett decennium. 
 	</p> 
 	<p>	
-	En av Harry Martinsons överlevnadsstrategier var att undvika konflikter. Det har
-berättats om hur en präst som träffade honom blev övertygad om att Martinson var en varmt
-troende kristen, något som knappast var fallet. Martinsons funderingar kring existensen var alltför
-komplexa för att kunna trängas in i någon religion. 
+	En av Harry Martinsons Ã¶verlevnadsstrategier var att undvika konflikter. Det har
+berÃ¤ttats om hur en prÃ¤st som trÃ¤ffade honom blev Ã¶vertygad om att Martinson var en varmt
+troende kristen, nÃ¥got som knappast var fallet. Martinsons funderingar kring existensen var alltfÃ¶r
+komplexa fÃ¶r att kunna trÃ¤ngas in i nÃ¥gon religion. 
 	</p>
 	<p>
-	1956 kom &quot;Aniara&quot;, diktsamlingen som kom att ge Martinson världsrykte. Men det är viktigt att förstå att Martinson bara använt rymdskeppet som en
-arena för viktiga frågor om människans överlevnad här på jorden. I diktsamlingen finns djupa insikter
-om människans natur och ofta en djup pessimism, men om vi tar till oss budskapet i Aniara finns en
-räddning, anser många Martinson-vänner.
+	1956 kom &quot;Aniara&quot;, diktsamlingen som kom att ge Martinson vÃ¤rldsrykte. Men det Ã¤r viktigt att fÃ¶rstÃ¥ att Martinson bara anvÃ¤nt rymdskeppet som en
+arena fÃ¶r viktiga frÃ¥gor om mÃ¤nniskans Ã¶verlevnad hÃ¤r pÃ¥ jorden. I diktsamlingen finns djupa insikter
+om mÃ¤nniskans natur och ofta en djup pessimism, men om vi tar till oss budskapet i Aniara finns en
+rÃ¤ddning, anser mÃ¥nga Martinson-vÃ¤nner.
 	</p>
- 	Harry Martinsons sista år förmörkades av en hätsk diskussion om det berättigade i hans och Eyvind Johnsons Nobelpris år 1974.
-		
-<br>_____________________________________________________________________________________________________________________________________________________________________
 		<p>
-		 Källa: <a href="http://harrymartinson.se/" target="_blank">
+ 		Harry Martinsons sista Ã¥r fÃ¶rmÃ¶rkades av en hÃ¤tsk diskussion om det berÃ¤ttigade i hans och Eyvind Johnsons Nobelpris Ã¥r 1974.
+		</p>
+<br>	<hr>
+		<p>
+		 KÃ¤lla: <a href="http://harrymartinson.se/" target="_blank">
 			Harry Martinson 
 			</a>
 		</p>
